# aftership-sdk-python

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  VERSION  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
aftership/: __about__.py  __init__.py  const.py  constants.py  courier.py  estimated_delivery_date.py  exception.py  notification.py  request.py  response.py  tracking.py  util.py
aftership/hmac/: hmac.py
aftership/signstring/: signstring.py
docs/: conf.py  index.rst
examples/: courier_example.py  courier_example_aes_signature.py  estimated_delivery_date_example.py  notification_example.py  tracking_example.py
tests/: conftest.py  test_couriers.py  test_estimated_delivery_date.py  test_notifications.py  test_trackings.py  test_util.py
tests/fixtures/cassettes/: CourierTestCase.test_aes_detect_courier.yaml  CourierTestCase.test_aes_get_all_couriers.yaml  CourierTestCase.test_aes_get_couriers.yaml  CourierTestCase.test_detect_courier.yaml  CourierTestCase.test_get_all_couriers.yaml  CourierTestCase.test_get_couriers.yaml  EstimatedDeliveryDateTestCase.test_batch_predict_estimated_delivery_date.yaml  NotificationTestCase.test_add_notification.yaml  NotificationTestCase.test_aes_list_notification.yaml  NotificationTestCase.test_list_notification.yaml  NotificationTestCase.test_remove_notification.yaml  TrackingTestCase.test_aes_create_tracking.yaml  TrackingTestCase.test_aes_delete_tracking.yaml  TrackingTestCase.test_aes_get_last_checkpoint.yaml  TrackingTestCase.test_aes_get_tracking.yaml  TrackingTestCase.test_aes_list_trackings.yaml  TrackingTestCase.test_aes_retrack.yaml  TrackingTestCase.test_aes_update_tracking.yaml  TrackingTestCase.test_create_tracking.yaml  TrackingTestCase.test_delete_tracking.yaml  TrackingTestCase.test_get_last_checkpoint.yaml  TrackingTestCase.test_get_tracking.yaml  (+12 more)
(+1 files in other folders)
