[tool.poetry]
name = "aftership"
version = "1.1.0"
description = "The python SDK of AfterShip API"
authors = ["AfterShip <support@aftership.com>"]
license = "MIT"

packages = [
    { include = "aftership" },
    { include = "*.md" },
    { include = "*.rst" },
    { include = "LICENSE" },
]

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.0.0'"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-vcr = "^1.0.2"
flake8 = "^3.8.3"
coveralls = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
