[tool.poetry]
name = "aftership"
version = "1.3.0"
description = "The python SDK of AfterShip API"
authors = ["AfterShip <support@aftership.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://developers.aftership.com"
repository = "https://github.com/aftership/aftership-sdk-python"
documentation = "https://github.com/aftership/aftership-sdk-python"
keywords = ["aftership", "api", "tracking", "shipping", "logistics"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
]

packages = [
    { include = "aftership" },
    { include = "*.md" },
    { include = "*.rst" },
    { include = "LICENSE" },
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.0.0'"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-vcr = "^1.0.2"
flake8 = "^3.8.3"
coveralls = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
